--- a/Getweets.ipynb
+++ b/Getweets.ipynb
@@ -10,10 +10,10 @@
     "import pandas as pd\n",
     "\n",
     "####input your credentials here\n",
-    "consumer_key = 'rEeEPZSZAY51KC8ulsRqYRmGC'\n",
-    "consumer_secret = 'mGvoYRFdJB4s7OHhpszZKZwRlOF03hSvGVsvwhGnn8S3qhuTWH'\n",
-    "access_token = '1132998016267366400-YTl3tbUq3tuTE57hVPrMxCqYAxF86l'\n",
-    "access_token_secret = 'I4OGfYIvg9TMC2pRWcRVxX1BpvvlEJIt6tVg2Dxm9IWGZ'\n",
+    "consumer_key = ''\n",
+    "consumer_secret = ''\n",
+    "access_token = ''\n",
+    "access_token_secret = ''\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
