--- a/Extração.ipynb
+++ b/Extração.ipynb
@@ -96,7 +96,7 @@
     "    data.append(tweet)\n",
     "    \n",
     "df_tweets = pd.DataFrame([q._json for q in data])\n",
-    "df_tweets.to_pickle('tim.pkl')"
+    "df_tweets.to_pickle('tweet.pkl')"
    ]
   },
   {
